[tool.poetry]

[project]
name = "calysto-maintainer-tools"
version = "1.0.3.dev0"
description = "GitHub Actions and tools for Calysto packages"
authors = [{ name = "Calysto" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pre-commit = ">=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
